# rstream

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  cliff.toml  create_tag.sh  pyproject.toml
.github/: release.yml
.github/workflows/: bump_main.yaml  pull_request_conventional_commit_validation.yml  test.yaml
compose/: .gitignore
docs/examples/basic_consumers/: basic_consumer.py  basic_consumer_binary.py  basic_consumer_offset_next.py  basic_consumer_offset_offset.py
docs/examples/basic_producers/: producer_send.py  producer_send_batch.py  producer_send_wait.py
docs/examples/deduplication/: producer_ded.py
docs/examples/filtering/: consumer_filtering.py  super_stream_consumer_filtering.py
docs/examples/load_balancer/: load_balancer.py  super.py
docs/examples/manual_server_offset_tracking/: consumer.py
docs/examples/reliable_client/: BestPracticesClient.py  README.md  appsettings.json
docs/examples/single_active_consumer/: README.md  sac_super_stream_producer.py  single_active_consumer.py
docs/examples/super_stream/: super_stream_consumer.py  super_stream_producer.py  super_stream_producer_key.py
rstream/: __init__.py  amqp.py  client.py  connection.py  constants.py  consumer.py  exceptions.py  producer.py  recovery.py  schema.py  superstream.py  superstream_consumer.py  superstream_producer.py  utils.py
rstream/_pyamqp/: _encode.py  constants.py  types.py
tests/: conftest.py  http_requests.py  test_amqp.py  test_client.py  test_cluster.py  test_consumer.py  test_consumer_validate_id.py  test_producer.py  test_validate_id.py  util.py
