[tool.poetry]
name = "rstream"
version = "0.31.0"
description = "A python client for RabbitMQ Streams"
authors = ["George Fortunatov <qweeeze@gmail.com>", "Daniele Palaia <dpalaia@vmware.com>", "Gabriele Santomaggio <g.santomaggio@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/rabbitmq-community/rstream"
repository = "https://github.com/rabbitmq-community/rstream"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mmh3 = "^5.2.0"
typing_extensions ="^4.15.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
black = "^25.9.0"
requests = "^2.32.4"
mmh3 = "^5.2.0"
typing_extensions ="^4.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
requests = "^2.32.5"
types-requests = "^2.32.4.20250913"
typing_extensions ="^4.15.0"

[tool.black]
line-length = 110

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "local_tests.*"
ignore_errors = true

[tool.isort]
profile = "black"
